main overflow fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,7 +184,6 @@ body{
     background-color: rgb(20, 25, 34);
     padding: 0 30px 0 20px;
     width: calc(100% - 50px);
-    overflow-y: auto;
 }
 
 /* header */
@@ -220,6 +219,7 @@ body{
 
 #focus{
     overflow-y: auto;
+    height: calc(100vh - 90px);
 }
 
 #big #menutwo{
